# substreateTest

.devcontainer/: Dockerfile  devcontainer.json
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
